<package>
  <name>range_msgs</name>
  <version>1.1.0</version>
  <description>
     Messages for point-to-point range-only devices.
  </description>
  <maintainer email="felramfab@gmail.com">Felipe R. Fabresse (University of Seville)</maintainer>
  <maintainer email="fcaballero@us.es">Fernando Caballero (University of Seville)</maintainer>
  <license>BSD</license>

  <author>Felipe Ramón Fabresse</author>
  <author>Alfredo Vázquez Reyes</author>
  <author>Fernando Caballero Benitez</author>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>


